ie10 fix for alignment of clear and search buttons

--- a/less/sections/primo-advanced-search.less
+++ b/less/sections/primo-advanced-search.less
@@ -23,11 +23,11 @@
     .make-row();
   }
   div.EXLSearchFieldRibbonPreFilters{
-    display:inline-block;
     border: none;
     background: none;
     min-height: 1px;
     padding: 0 0 0 0;
+    display:inline;
   }//div.EXLSearchFieldRibbonPreFilters
 
     //resetting the div to conserve more space
